# navi

./: CMakeLists.txt  README.md  example.navi.cfg  navi.cfg  test.sh
include/: cfg_parser.h  config.h  ext_table.h  file.h  macros.h  main.h  path.h  sysdep.h  table.h
src/: cfg_parser.c  ext_table.c  main.c  path.c  sysdep.c  table.c
